MDEV-25353 JSON_TABLE: Illegal mix of collations upon executing PS once, or SP/function twice.

Do not adapt to the argument charset anymore. Just use the utf8mb4 as
the default cherset.